--- a/src/css/sass/_typography.scss
+++ b/src/css/sass/_typography.scss
@@ -1,5 +1,8 @@
+body {
+    font-family: "Poppins", sans-serif;
+}
+
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Poppins", sans-serif;;
     color: #FFF;
 }
 
@@ -34,7 +37,5 @@ h6{
 }
 
 p{
-    font-family: 'Poppins', sans-serif;
     font-size: 16px;
-    color: $gray-4;
 }
