--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,8 +8,11 @@
   color: #2DC7ED;
 }
 
-h1, h2, h3, h4, h5, h6 {
+body {
   font-family: "Poppins", sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
   color: #FFF;
 }
 
@@ -44,9 +47,7 @@ h6 {
 }
 
 p {
-  font-family: "Poppins", sans-serif;
   font-size: 16px;
-  color: #6D6E70;
 }
 
 .s-0 {
@@ -657,4 +658,58 @@ p {
 body {
   width: 100%;
   background-color: #050607;
+}
+
+header {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0.5rem 1.5rem;
+}
+
+a {
+  color: #EDEFF0;
+  text-decoration: none;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-space-between {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.border {
+  border: 1px solid red;
+}
+
+.menu {
+  list-style: none;
+  display: flex;
+  gap: 1.5rem;
+}
+
+.nav-link {
+  padding: 0.5rem;
+  transition: opacity 0.3s ease;
+}
+.nav-link:hover {
+  opacity: 0.7;
+}
+
+.input-search {
+  min-width: 300px;
+  height: 40px;
+  background-color: #15171A;
+  color: #FAFCFC;
+  border: none;
+  border-radius: 0.25rem;
+  padding: 0.5rem;
 }/*# sourceMappingURL=style.css.map */
